<resources>
    <string name="app_name">Greet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Okay</string>
    <string name="cancle">Cancle</string>

    <string name="story">Scribbles</string>
    <string name="horoscope">Horoscope</string>
    <string name="quotes">Million Dollar Thought</string>
    <string name="places">Travel Around</string>
    <string name="didYouKnow">Black Box</string>
    <string name="inspire">Tell A Tale</string>
    <string name="whyAds">Why Ads?</string>
    <string name="tellFriend">Invite Your Friends</string>
    <string name="suggestions">Suggestions/Demands</string>

    <!--Horoscope selector-->
    <string name="horo_title">Choose Zodiac Sign</string>
    <array name="horoscope_selector">
        <item>Aries: March 21 - April 19</item>
        <item>Taurus: April 20 - May 20</item>
        <item>Gemini: May 21 - June 20</item>
        <item>Cancer: June 21 - July 22</item>
        <item>Leo: July 23 - August 22</item>
        <item>Virgo: August 23 - Sept. 22</item>
        <item>Libra: Sept. 23 - October 22</item>
        <item>Scorpio: October 23 - Nov. 21</item>
        <item>Sagittarius: Nov. 22 - Dec. 21</item>
        <item>Capricorn: Dec. 22 - Jan. 19</item>
        <item>Aquarius: Jan. 20 - Feb. 18</item>
        <item>Pisces: Feb. 19 - March 20</item>
    </array>


    <!--Layout Messages-->
    <string name="loading_story">Opening Story Of The Day&#8230;</string>
    <string name="loading_story_archive">Grabbing every story from archive&#8230;</string>
    <string name="loading_places">The captain announced that we are about to land&#8230;</string>
    <string name="loading_places_archive">Rescheduling flight tickets&#8230;</string>
    <string name="loading_horoscope">Today\'s Horoscope For You&#8230; </string>
    <string name="loading_error">Oops! Check your internet connection. Pull down screen to refresh.</string>

    <!--Settings-->
    <string name="refresh">Refresh</string>
    <string name="change_horoscope">Change Zodiac Sign</string>
    <string name="rate_app">Rate the app</string>

    <!--Inspire Text-->
    <string name="InspireText">If you have a story that can inspire or bring smiles, then share your story with everyone and get featured in the app.</string>
    <string name="WhyAdsText">We understand ads can be annoying. Currently ads are there to cover costs of running our infrastructure. We will continue our efforts to resolve this inconvenience as soon as possible. Greet day!</string>
    <string name="shareHere">SHARE HERE!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Facts and Quotes-->
    <string name="DidYouKnow">Elephant is the only mammal that can\'t jump.</string>
    <string name="Quotes">Innovation distinguishes between a leader and a follower.</string>
    <string name="Author">Steve Jobs</string>
    <string name="title_activity_full_story">Story</string>
    <string name="title_activity_full_place_info">Places</string>

</resources>
