<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_story" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/story" />
        <item android:id="@+id/nav_horoscope" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/horoscope" />
        <item android:id="@+id/nav_places" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/places" />
        <item android:id="@+id/nav_quotes" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/quotes" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>