<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FullStory">

    <item android:id="@+id/Refresh" android:title="Refresh"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item android:id="@+id/Share" android:title="Share"
        android:icon="@mipmap/ic_action_share"
        app:showAsAction="always"/>
    <item android:id="@+id/change_horoscope"
        android:title="@string/chanege_horoscope"
        android:orderInCategory="10"/>
    <item android:id="@+id/suggestions"
        android:title="@string/suggestions"
        android:orderInCategory="11"/>
    <item android:id="@+id/tellFriend"
        android:title="@string/tellFriend"
        android:orderInCategory="12"/>
    <item android:id="@+id/rate_app"
        android:title="@string/rate_app"
        android:orderInCategory="13"/>

</menu>